--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
+appdirs==1.4.3
 astroid==2.4.0
 certifi==2019.11.28
 chardet==3.0.4
-click==7.1.1
+click==7.1.2
 DateTime==4.3
+distlib==0.3.0
+filelock==3.0.12
 Flask==1.1.2
+gunicorn==20.0.4
 idna==2.9
+importlib-metadata==1.6.0
 isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.11.1
+Jinja2==2.11.2
 jsn==1.1.7
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+pipenv==2018.11.26
 pycountry==19.8.18
 PyJWT==1.7.1
 pylint==2.5.0
@@ -23,6 +29,9 @@ toml==0.10.0
 twilio==6.38.0
 typed-ast==1.4.1
 urllib3==1.25.8
+virtualenv==20.0.18
+virtualenv-clone==0.5.4
 Werkzeug==1.0.1
 wrapt==1.12.1
+zipp==3.1.0
 zope.interface==5.0.2
